_sass/header.scss
.navigation{
  height: auto;
  position: absolute;
  z-index: 10;
  width: 100%;
  display: flex;
  flex-direction: row;
  .nav-left{
    flex: auto;
    width: 11%;
    display: inline-block;
    position: relative;
    left: 8px;
    top: 5px;
    h1{
      color: white;
      letter-spacing: 3px;
      font-size: 35px;
    }
  }
  .nav-right{
    text-align: right;
    display: inline-block;
    flex: 1 1 auto;
    .nav-right-content{
      width: auto;
      .nav-mobile{
        visibility: hidden;
        width: 30px;
        height: 30px;
        margin: 20px;
        background-image: url('../../images/nav.svg');
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center;
        float: right;
        vertical-align: top;
        display: none;
        position: relative;
        z-index: 1000;
      }
      .links{
        padding-right: 130px;
        a{
          display: inline-block;
          padding: 20px;
          text-decoration: none;
          color: white;
          cursor: pointer;
          text-transform: uppercase;
          vertical-align: top;
        }
        a:hover{
          position: relative;
          border-top: 5px solid white;
          padding-top: 10px;
        }
      }
      .badge{
        width: 100px;
        position: fixed;
        top: 0;
        right: 20px;
        z-index: 1000;
      }
    }
  }
}

.video-container{
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

@media screen and (max-width: 730px){
  #hero{
    video{
      display: none;
    }
    background-image: url("../../images/millenium-point.jpg");
  }
}


#hero{
  height: 100vh;
  background-size: cover;
  background-repeat: no-repeat;
  overflow-x: hidden;
  position: relative;
  video{
    min-width: 100%;
    min-height: 100%;
  }
  .header-content{
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    //left: 10%;
    h1{
      color: white;
      font-size: 40px;
      text-transform: uppercase;
      line-height: 45px;
      letter-spacing: 4px;
      font-weight: 400;
      color: white;
      padding: 0px 5%;
      .header-title{
        font-size: 50px;
        text-transform: uppercase;
        font-weight: 600;
      }
    }
    h3{
      color: white;
      font-size: 25px;
      font-weight: 300;
      letter-spacing: 5px;
      text-transform: uppercase;
      margin: 10px 0px;
      padding: 0px 5%;
      sup{
        font-size: 12px;
      }
    }
    button{
      -webkit-appearance: none;
      padding: 10px 30px;
      background-color: #000000a1;
      border: 2px solid white;
      border-radius: 3px;
      color: white;
      text-transform: uppercase;
      letter-spacing: 3px;
      font-size: 13px;
      transition: all 0.2s ease;
      cursor: pointer;
      position: relative;
      left: 5%;
      display: inline-block;
    }
    button:hover{
      background-color: white;
      color: black;
    }
    #apply-button{
      margin-right: 20px;
    }
  }
  .social-links-header{
    position: absolute;
    left: 100%;
    top: 50%;
    transform: translate(-100%, -50%);
    height: auto;
    border-left: 2px solid white;
    border-bottom: 2px solid white;
    border-top: 2px solid white;
    border-radius: 5px 0px 0px 5px;
    padding: 10px 10px;
    transition: all 0.3s ease;
    img{
      display: block;
      height: 20px;
      cursor: pointer;
    }
    #logo{
      margin: 10px 0px 10px 0px;
    }
  }
  .social-links-header:hover{
    background-color: rgba(255, 255, 255, 0.2);
  }
}



@media screen and (max-width: 600px){
  #hero{
    .header-content{
      .header-title{
        span{
          display: block;
        }
      }
      button{
        display: block;
      }
      #sponsor-button{
        margin-top: 15px;
      }
    }
  }
}

/*Without Event info 550px width */

@media screen and (max-width: 778px){
  .nav-mobile{
    visibility: visible !important;
    display: inline-block !important;
  }
  .nav-right-content{
    .links a{
      display: none !important;
    }
    .badge{
      display: none !important;
    }
  }
}

@media screen and (max-width: 415px){
  #hero{
    .header-content{
      h1{
        font-size: 28px;
        .header-title{
          font-size: 40px;
        }
      }
      h3{
        font-size: 17px;
      }
    }
  }
}

